--- a/app/styles/Footer.css
+++ b/app/styles/Footer.css
@@ -1,45 +1,18 @@
 .footer {
   display: grid;
-  gap: 16px;
   row-gap: 16px;
   width: 100%;
-
-  color: gray;
+  color: white;
   margin-top: 64px;
-}
-
-.box41 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  width: 300px;
-  height: 150px;
-  border-radius: 10px;
-  line-height: 28px;
 }
 
 .box43 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
-  width: 300px;
-  height: 150px;
-  border-radius: 10px;
+  justify-content: center;
   line-height: 28px;
   gap: 40px;
-  margin-left: 200px;
+  background-color: #3583d2;
 }
-
-.box42 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 300px;
-  height: 150px;
-  border-radius: 10px;
-  line-height: 28px;
-  color: white;
-}
+/**/
