--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
 loggans färg: #342755 och ljusa #2645A2 och mjörkblå #1e367d
 text-bg  #3583d2, ljusblå - #1e367d, lite mörkare -  #346AB4
 mellanslag: &nbsp; bodys: ljusblå azure.
+background-color: rgb(241, 247, 250);
+ #f9f9f9
+#F5F8EF
+#ECF3EC
 
 TEXT 
 font-size: 1.5rem;
@@ -18,7 +22,8 @@ font-size: 1.5rem;
 */
 
 body {
-  background-color: rgb(241, 247, 250);
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
