--- a/app/styles/Footer.module.css
+++ b/app/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .div201 {
   width: 100%; /* Täcker hela skärmens bredd */
-  background-color: #346ab4;
+  background-color: #1e367d;
   padding: 20px; /* Standard padding */
   box-sizing: border-box;
   color: white;
