--- a/app/styles/Hero.module.css
+++ b/app/styles/Hero.module.css
@@ -44,7 +44,7 @@
   font-size: 2.5rem;
   opacity: 0;
   font-weight: 600;
-  color: #346ab4;
+  color: #68f0f0;
   animation: slideInRight 1.5s ease forwards;
   animation-delay: 0.5s;
   font-family: "Montserrat", sans-serif; /* Lägg till Montserrat */
