--- a/app/styles/Guide.css
+++ b/app/styles/Guide.css
@@ -88,7 +88,7 @@
   font-size: 1.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  background-color: #1eb4cd;
+  background-color: #78f4f4;
   color: #333;
   border-radius: 8px;
   text-align: left;
