--- a/app/pages/omoss/omoss.module.css
+++ b/app/pages/omoss/omoss.module.css
@@ -72,3 +72,64 @@
 .cardscontainer {
   margin-left: -200px;
 }
+@media (max-width: 767px) {
+  .a4container {
+    flex-direction: column; /* Separata kolumner */
+  }
+
+  .h1box {
+    font-size: 1.2rem;
+  }
+
+  .rotatedimg {
+    display: none;
+  }
+
+  .textcontainer {
+    font-size: 0.9rem;
+  }
+
+  .visiondiv h2 {
+    font-size: 1rem;
+  }
+
+  .visiontext {
+    font-size: 0.9rem;
+  }
+  .workimg{
+    width: 550px;
+    height:400px;
+  }
+  .workingcontainer {
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+    gap: 20px;
+  }
+  .cardscontainer{
+    margin-top:-450px;
+    margin-left:5px;
+  }
+
+  .a4container{
+    margin-top:1000px;
+    margin-left:-150px;
+    width: 80%;
+  }
+}
+
+
+/* Medelstora skärmar (tablets) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .a4container {
+    flex-direction: column; /* Fortsatt kolumnformat */
+  }
+
+  .h1box {
+    font-size: 1.5rem;
+  }
+
+  .rotatedimg {
+    transform: rotate(-5deg);
+  }
+}
