--- a/app/styles/Guide.css
+++ b/app/styles/Guide.css
@@ -114,68 +114,91 @@ margin-left: 200px;
   .section {
     flex-direction: column;
     text-align: center;
-    padding: 20px 10px; /* Lägg till luft runt sektionen */
-    margin-top: 50px; /* Flytta hela sektionen längre ner */
+    overflow: hidden; /* Hide any overflow */
+margin: 0;
+   
   }
   .övertext-container {
-    width: 100%;
-    margin-right: 0;
-    margin-top: 30px; /* Mer luft ovanför texten */
+    margin-top: 50px;
+    margin-left: 10%;
+    
   }
+
   .övertextdiv {
-    font-size: 1rem;
-    padding: 20px; /* Mer luft i textbehållaren */
-  }
-  .images-container {
-    flex: none;
-    width: 100%;
-    justify-content: center;
-    margin: 30px 0; /* Mer luft runt bilder */
-  }
-  .imgspel {
-    max-width: 140px; /* Anpassa bildstorlek */
-    margin: 15px; /* Luft mellan bilder */
+    width: 90%;
+    margin-left: 0;
+    font-size: 1.2rem;
+    padding: 15px;
+    
   }
   .text-container {
-    position: relative;
-    margin-top: 30px; /* Flytta texten längre ner */
-    width: 100%;
-    padding: 15px;
+    right: 20px;
+    max-width: 90%;
+    font-size: 1rem;
+    margin-top: 10px;
   }
+
   .ptext {
     font-size: 1rem;
-    padding: 20px; /* Mer luft för bättre läsbarhet */
+    padding: 15px;
+  }
+  .images-container {
+    width: 80%;
+    margin-top: 100px;
+    margin-bottom: 200px;
+  }
+
+  .imgspel {
+    width: 170px;
+    margin-left: 0;
+    margin-left: 30px;
+
   }
 }
 
 /* Tablets (481px - 768px) */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (max-width: 768px) {
+
   .section {
     flex-direction: column;
-    padding: 30px 20px;
-    margin-top: 70px; /* Flytta sektionen längre ner */
+    text-align: center;
+    overflow: hidden; /* Hide any overflow */
+margin: 0;
+   
   }
   .övertext-container {
-    margin-right: 0;
-    width: 90%;
-    margin-top: 40px; /* Luft ovanför texten */
+    margin-top: 70px;
   }
+
   .övertextdiv {
-    font-size: 1.2rem;
-    padding: 25px;
+    width: 85%;
+    margin-left: 20px;
+    font-size: 1.3rem;
+    padding: 18px;
   }
+
   .images-container {
-    width: 80%;
-    margin: 40px 0; /* Luft mellan text och bilder */
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 150px;
   }
+
   .imgspel {
-    max-width: 180px;
-    margin-bottom: 20px;
+    margin-left: 30px;
+    width: 170px;
+
   }
+
   .text-container {
-    margin-top: 50px; /* Flytta texten längre ner */
-    width: 90%;
-    padding: 20px;
+    right: 40px;
+    max-width: 80%;
+    font-size: 1.2rem;
+    margin-top: 20px;
+  }
+
+  .ptext {
+    font-size: 1.2rem;
+    padding: 18px;
   }
 }
 
