--- a/app/styles/Guide.css
+++ b/app/styles/Guide.css
@@ -41,7 +41,7 @@ margin-left: 200px;
   animation: floatIn 2.5s ease forwards;
   opacity: 0;
   animation-play-state: paused; /* Stoppar animationen initialt */
-  margin-left: 50px;
+  margin-left: 30px;
 }
 
 .img1 {
@@ -184,7 +184,7 @@ margin: 0;
   }
 
   .imgspel {
-    margin-left: 30px;
+    margin-left: 50px;
     width: 170px;
 
   }
@@ -199,6 +199,12 @@ margin: 0;
   .ptext {
     font-size: 1.2rem;
     padding: 18px;
+  }
+  .img3 {
+    animation-delay: 0.9s;
+    margin-top: 50px;
+    left: 150px;
+    transform: translateX(50px);
   }
 }
 
