--- a/app/pages/kontakt/index.module.css
+++ b/app/pages/kontakt/index.module.css
@@ -21,7 +21,6 @@
   cursor: not-allowed;
 }
 
-
 .description {
   text-align: center;
   margin-bottom: 2rem;
@@ -44,6 +43,12 @@
 .inputGroup label {
   margin-bottom: 0.5rem;
   font-weight: bold;
+}
+.successMessage {
+  color: green;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .inputGroup input,
