--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   color: #342755;
   font-size: 2.8rem;
